      option multiple times. (James Westby, #185772)

    * New clean-tree command, from bzrtools.  (Aaron Bentley, Jelmer Vernoij)

    * New command ``bzr launchpad-open`` opens a Launchpad web page for that
      branch in your web browser, as long as the branch is on Launchpad at all.
      (Jonathan Lange)

  IMPROVEMENTS:

    * ``bzr add`` no longer prints ``add completed`` on success. Failure
      still prints an error message. (Robert Collins)

    * ``bzr branch`` now has a ``--no-tree`` option which turns off the
      generation of a working tree in the new branch.
      (Daniel Watkins, John Klinger, #273993)

    * Bazaar will now point out ``bzr+ssh://`` to the user when they 
      use ssh://. (Jelmer Vernooij, #330535)

    * ``bzr -v info`` now omits the number of committers branch statistic,
      making it many times faster for large projects. To include that
      statistic in the output, use ``bzr -vv info``.
      (Ian Clatworthy)

    * ``bzr push`` to a ``bzr`` url (``bzr://``, ``bzr+ssh://`` etc) will
      stream if the server is version 1.13 or greater, reducing roundtrips
      significantly. (Andrew Bennetts, Robert Collins)

    * Lightweight Checkouts and Stacked Branches should both be much
      faster over remote connections. Building the working tree now
      batches up requests into approx 5MB requests, rather than a separate
      request for each file. (John Arbash Meinel)

    * Progress bars now show the rate of network activity for
      ``bzr+ssh://`` and ``bzr://`` connections.  (Andrew Bennetts)

    * Support for GSSAPI authentication when using HTTP or HTTPS. 
      (Jelmer Vernooij)

    * The ``bzr shelve`` prompt now includes a '?' help option to explain the
      short options better. (Daniel Watkins, #327429)

    * ``bzr lp-open`` now falls back to the push location if it cannot find a
      public location. (Jonathan Lange, #332372)

    * ``bzr lp-open`` will try to find the Launchpad URL for the location